@startuml
!pragma layout smetana
title Modelo de Datos — Diagrama de Clases Conceptual (UML 2.5)\nWireless HeatMapper (modalidad 100 % en línea)
skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2980B9
skinparam classHeaderBackgroundColor #2980B9
skinparam classHeaderFontColor white
skinparam arrowColor #2980B9
skinparam noteBackgroundColor #FFFDE7
hide circle

enum RolUsuario {
  ADMIN
  TECNICO
}

enum EstadoProyecto {
  NUEVO
  EN_PROGRESO
  COMPLETADO
  ARCHIVADO
}

enum FormatoPlano {
  PNG
  JPG
  PDF
}

enum NivelSenal {
  EXCELENTE
  BUENA
  ACEPTABLE
  DEBIL
  ZONA_MUERTA
}

enum AlgoritmoInterp {
  IDW
  KRIGING
  SPLINE
}

enum TipoMapa {
  REAL
  PROYECTADO
}

enum TipoAccionAP {
  NUEVO
  REUBICACION
  ELIMINAR
  CAMBIAR_CANAL
}

enum EstadoEscenario {
  BORRADOR
  FINALIZADO
  IMPLEMENTADO
}

enum FormatoReporte {
  PDF
  HTML
  JSON
}

class Usuario {
  +id : Long
  +email : String
  +passwordHash : String
  +nombreCompleto : String
  +rol : RolUsuario
  +activo : Boolean
  +fechaCreacion : DateTime
  +ultimoAcceso : DateTime
}

class Cliente {
  +id : Long
  +nombre : String
  +activo : Boolean
  +fechaCreacion : DateTime
}

class Proyecto {
  +id : Long
  +nombre : String
  +descripcion : String
  +fechaCreacion : DateTime
  +estado : EstadoProyecto
}

class Plano {
  +id : Long
  +rutaArchivo : String
  +formato : FormatoPlano
  +escalaMetrosPorPixel : Float
  +anchoPixeles : Int
  +altoPixeles : Int
}

class PuntoMedicion {
  +id : Long
  +coordX : Float
  +coordY : Float
  +timestamp : DateTime
  +nota : String
}

class MedicionWifi {
  +id : Long
  +ssid : String
  +bssid : String
  +rssi : Int
  +canal : Int
  +frecuenciaGHz : Float
  +nivel : NivelSenal
  +recibidoEn : DateTime
}

class MapaCalor {
  +id : Long
  +tipo : TipoMapa
  +algoritmo : AlgoritmoInterp
  +resolucion : Int
  +fechaGeneracion : DateTime
  +datosInterpolados : JSONB
}

class AnalisisCobertura {
  +id : Long
  +zonasMuertas : Int
  +solapamientosAP : Int
  +interferenciasCanal : Int
  +porcentajeCobertura : Float
}

class APDetectado {
  +id : Long
  +bssid : String
  +ssid : String
  +canal : Int
  +rssiPromedio : Float
  +coordXEstimada : Float
  +coordYEstimada : Float
  +ubicacionConfirmada : Boolean
}

class EscenarioOptimizado {
  +id : Long
  +nombre : String
  +cantidadApsRecomendados : Int
  +porcentajeMejoraEsperado : Float
  +observacionesIA : String
  +estado : EstadoEscenario
}

class RecomendacionAP {
  +id : Long
  +tipoAccion : TipoAccionAP
  +coordX : Float
  +coordY : Float
  +potenciaRecomendadaMw : Float
  +canal : Int
  +ssidSugerido : String
  +mejoraEsperadaDb : Float
  +prioridad : Int
  +justificacion : String
}

class Reporte {
  +id : Long
  +titulo : String
  +fechaGeneracion : DateTime
  +formato : FormatoReporte
  +rutaArchivo : String
}

class TokenEnlace {
  +id : Long
  +token : String
  +fechaCreacion : DateTime
  +fechaExpiracion : DateTime
  +activo : Boolean
  +accesosUsados : Int
  +accesosMax : Int
}

Cliente "0..1" --o "0..*" Proyecto : encarga >
Usuario "1" --o "0..*" Proyecto : posee >
Proyecto "1" *-- "0..*" Plano : contiene
Plano "1" *-- "0..*" PuntoMedicion : registra
PuntoMedicion "1" *-- "1..*" MedicionWifi : captura
Plano "1" *-- "0..*" MapaCalor : genera
MapaCalor "1" --o "0..1" AnalisisCobertura : produce
AnalisisCobertura "1" *-- "0..*" APDetectado : identifica
Proyecto "1" *-- "0..*" EscenarioOptimizado : optimiza
AnalisisCobertura "1" -- "0..*" EscenarioOptimizado : base de
EscenarioOptimizado "1" *-- "1..*" RecomendacionAP : agrupa
EscenarioOptimizado "1" -- "0..1" MapaCalor : proyecta
RecomendacionAP "0..*" --o "0..1" APDetectado : refiere a
Proyecto "1" *-- "0..*" Reporte : exporta
Proyecto "1" *-- "0..*" TokenEnlace : compartido vía

note bottom of MedicionWifi
  Umbrales CWNA-107 (Cap. 13 + 14):
  EXCELENTE   ≥ −50 dBm
  BUENA       −51 a −70 dBm  ← objetivo de diseño
  ACEPTABLE   −71 a −80 dBm
  DEBIL       −81 a −90 dBm
  ZONA_MUERTA < −90 dBm
end note

note bottom of TokenEnlace
  UUID v4 firmado, expiración configurable.
  El cliente accede al portal sin instalar app.
  Revocable manualmente desde la web del técnico.
end note

note top of Usuario
  Persiste en PostgreSQL central.
  Rol ADMIN: panel de administración web.
  Rol TECNICO: app móvil + portal del técnico.
  Pre-aprovisionado por el ADMIN (PB-13).
end note

note right of Cliente
  Creado y gestionado exclusivamente
  por el ADMIN (PB-19).
  El técnico solo selecciona el cliente
  al crear/editar un proyecto.
end note
@enduml
